--- a/main.html
+++ b/main.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	 <div>
+       <h3>
+        This is a Heading
+       </h3> 
+    </div>
 
 </body>
 
